--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "input": "^1.0.1",
+    "nav": "^0.0.2",
+    "navigate": "^0.3.6",
     "react": "^18.1.0",
+    "react-collapsed": "^3.3.2",
     "react-dom": "^18.1.0",
+    "react-loading": "^2.0.3",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.1",
+    "section": "^0.4.2",
+    "tachyons-components": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
