--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "navigate": "^0.3.6",
     "react": "^18.1.0",
     "react-collapsed": "^3.3.2",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-paginate": "^8.1.3",
+    "react-pagination": "^1.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
