--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "input": "^1.0.1",
     "nav": "^0.0.2",
     "navigate": "^0.3.6",
+    "pagination": "^0.4.6",
     "react": "^18.1.0",
     "react-collapsed": "^3.3.2",
     "react-dom": "^18.2.0",
